# customer-behaviour-analysis

./: README.md  customer behaviour analysis.R
customer-behavior-analysis/: README.md  customer behaviour analysis again.py  pyproject.toml
customer-behavior-analysis/notebooks/: 01-exploratory-data-analysis.ipynb
customer-behavior-analysis/scripts/: run_pipeline.py
customer-behavior-analysis/src/customer_behavior/: data_processing.py  features.py  models.py  visualize.py
customer-behavior-analysis/tests/: test_data_processing.py
